--- a/pet_blog/src/index.css
+++ b/pet_blog/src/index.css
@@ -20,6 +20,7 @@
   
 
   /* Button Background */
+  --orange-light:hsl(24, 100%, 50%);
   --orange-57: hsl(7, 100%, 50%);
   --black-100: rgb(100, 100, 100);
 
@@ -45,7 +46,7 @@
   --brown-90: hsl(27, 27%, 90%);
 
   /* input && textarea focus */
-  --focus: hsl(240, 100%, 82%);
+  --focus: hsl(12, 100%, 72%);
 }
 
 /* html {
@@ -311,7 +312,7 @@ Landing Page
   display: grid;
   gap: 1rem;
   align-content: center;
-  text-align: start;
+  text-align: center;
   padding-top: 7rem;
 }
 
@@ -322,6 +323,7 @@ Landing Page
 
   .mobile-landing-page-hero-paragraph {
     max-width: 400px;
+    margin: 0 auto
   }
 }
 
@@ -340,21 +342,31 @@ Landing Page
   font-size: clamp(1rem, 1vw + 0.5rem, 1.2rem);
 }
 
+@media (min-width: 479px) {
+  .mobile-landing-page-hero-header {
+    max-width: 500px;
+  }
+
+  .mobile-landing-page-hero-paragraph {
+    max-width: 400px;
+    margin: 0 auto
+  }
+}
+
 .mobile-landing-page-join-btn {
-  justify-self: start;
-  padding: 0.6rem 1.5rem ;
+  justify-self: center;
+  padding: 0.5rem 1.5rem ;
   text-align: center;
-  background: hsl(7, 100%, 54%);
+  background: var(--orange-57);
   color: hsl(0, 0%, 100%);
-  border-radius: 5px;
+  border-radius: 30px;
   letter-spacing: 0.05rem;
   font-weight: 500;
 }
 
 /* Featured posts */
 .landing-page-featured-posts-container {
-  padding: 1.5rem 0;
-  padding-bottom: 2rem;
+  padding: 2rem 0;
 }
 
  .landing-page-featured-posts-wrapper {
@@ -362,21 +374,22 @@ Landing Page
   max-width: 1000px;
   margin: 0 auto;
   display: grid;
-  gap: 1.5rem;
+  gap: 2rem;
 }
 
 .landing-page-featured-post-header-container {
   display: flex;
   flex-direction: column;
   justify-content: start;
-  align-items: start;
-  gap: 0.3rem;
+  align-items: center;
+  gap: 0.5rem;
 }
 
 .landing-page-featured-posts-header {
   text-wrap: pretty;
   color: var(--orange-10);
   line-height: 1.3;
+  text-align: center;
   font-size: clamp(1.5rem, 3vw + 1rem, 2rem);
 }
 
@@ -384,8 +397,9 @@ Landing Page
   letter-spacing: 0.05rem;
   line-height: 1.5;
   color: var(--orange-20);
-  max-width: 550px;
+  max-width: 500px;
   font-weight: 500;
+  text-align: center;
   font-size: 1.05rem;
 }
 
@@ -400,7 +414,7 @@ Landing Page
   align-content: start;
   gap: 1rem;
 
-  box-shadow: 3px 3px 10px -1px var(--black-70);
+  box-shadow: 3px 3px 10px -1px var(--black-80);
   padding: 1rem;
   border-radius: 8px;
 }
@@ -485,7 +499,7 @@ Landing Page
 
 /* Landing page topics */
 .landing-page-topics-wrapper {
-  padding: 1.5rem 0;
+  padding: 2rem 0;
   padding-bottom: 2rem;
   background: var(--brown-90);
 }
@@ -496,7 +510,7 @@ Landing Page
   margin: 0 auto;
   display: grid;
   align-content: start;
-  gap: 1.5rem;
+  gap: 2rem;
 }
 
 .landing-page-topic-header-container {
@@ -505,7 +519,7 @@ Landing Page
   justify-content: center;
   align-items: center;
   text-align: center;
-  gap: 0.3rem
+  gap: 0.5rem
 }
 
 .landing-page-topic-header {
@@ -527,7 +541,7 @@ Landing Page
 .landing-page-topics {
   display: grid;
   align-content: start;
-  gap: 1rem;
+  gap: 2rem;
 }
 
 .landing-page-topic {
@@ -537,7 +551,7 @@ Landing Page
   gap: 0.8rem;
   border-radius: 20px;
   transition: transform 200ms linear;
-  box-shadow: 3px 3px 10px -1px var(--black-40);
+  box-shadow: 3px 3px 10px -1px var(--black-30);
 }
 
 @media (hover) {
@@ -597,30 +611,12 @@ Landing Page
   color: var(--black-70)
 }
 
-.landing-page-topic-see-all-forums {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 0.5rem;
-  color: var(--orange-57);
-  padding: 0.6rem 1rem;
-  border-radius: 5px;
-  outline: 2px solid var(--orange-57);
-  font-weight: 500;
-}
-
-@media (hover) {
-  .landing-page-topic-see-all-forums:hover {
-    background: var(--orange-57);
-    color: white;
-  }
-}
 /* end */
 
 
 /* Landing page posts */
 .landing-page-posts-container{
-  padding: 1.5rem 0;
+  padding: 2rem 0;
   padding-bottom: 2rem;
 }
 
@@ -629,21 +625,22 @@ Landing Page
   max-width: 1000px;
   margin: 0 auto;
   display: grid;
-  gap: 1.5rem;
+  gap: 2rem;
 }
 
 .landing-page-post-header-container {
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: center;
   justify-content: start;
-  gap: 0.3rem;
+  gap: 0.5rem;
 }
 
 .landing-page-posts-header {
   text-wrap: pretty;
   color: var(--orange-10);
   line-height: 1.3;
+  text-align: center;
   font-size: clamp(1.5rem, 3vw + 1rem, 2rem);
 }
 
@@ -651,8 +648,9 @@ Landing Page
   letter-spacing: 0.05rem;
   line-height: 1.5;
   color: var(--orange-20);
-  max-width: 550px;
+  max-width: 500px;
   font-weight: 500;
+  text-align: center;
   font-size: 1.05rem;
 }
 
@@ -667,7 +665,7 @@ Landing Page
   align-content: start;
   gap: 1rem;
 
-  box-shadow: 3px 3px 10px -1px var(--black-70);
+  box-shadow: 3px 3px 10px -1px var(--black-80);
   padding: 1rem;
   border-radius: 8px;
 }
@@ -749,13 +747,14 @@ Landing Page
 }
 
 .landing-page-post-see-all-posts {
+  justify-self: center;
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 0.5rem;
   color: var(--orange-57);
-  padding: 0.6rem 1rem;
-  border-radius: 5px;
+  padding: 0.5rem 1.5rem;
+  border-radius: 30px;
   outline: 2px solid var(--orange-57);
   font-weight: 500;
 }
@@ -771,7 +770,7 @@ Landing Page
 /* Email subscription */
 .landing-page-email-sub-form-wrapper {
   background: var(--brown-90);
-  padding: 1.5rem 0;
+  padding: 2rem 0;
   padding-bottom: 2rem;
 }
 
@@ -789,7 +788,7 @@ Landing Page
   flex-direction: column;
   align-content: center;
   justify-content: center;
-  gap: 0.3rem;
+  gap: 0.5rem;
   text-align: center;
 }
 
@@ -807,6 +806,7 @@ Landing Page
   color: var(--orange-20);
   text-wrap: pretty;
   font-size: 1.05rem;
+  max-width: 400px;
 }
 
 .landing-page-email-sub-form {
@@ -852,7 +852,6 @@ Landing Page
 @media screen and (min-width: 570px) {
 
   /* Landing page featured posts */
-
   .landing-page-featured-posts {
     grid-template-columns: repeat(2, 1fr);
   }
@@ -867,11 +866,9 @@ Landing Page
   .landing-page-featured-post-title {
     font-size: clamp(1.1rem, 1vw + 1rem , 1.2rem);
   }
-
   /* end */
 
   /* Landing page latest posts  */
-
   .landing-page-posts {
     grid-template-columns: repeat(2, 1fr);
   }
@@ -889,31 +886,35 @@ Landing Page
 
   .landing-page-post-see-all-posts {
     justify-self: center;
-    padding: 0.4rem 1rem;
-    margin-top: 1rem;
+    margin-top: 2rem;
   }
-
   /* end */
 
   /* Landing page topics */
-
   .landing-page-topic-name {
     font-size: clamp(1rem, 1vw + 1rem, 1.1rem);;
-  }
-  .landing-page-topic-see-all-forums {
-    justify-self: center;
-    padding: 0.4rem 1rem;
-    margin-top: 1rem;
-
   }
   /* end */
 
 }
 
 @media screen and (min-width: 600px) {
+  /* mobile landing page header */
+  .mobile-landing-page-hero-text-wrapper {
+    text-align: start;
+  }
+
+  .mobile-landing-page-hero-paragraph {
+    max-width: 400px;
+    margin: 0;
+  }
+
+  .mobile-landing-page-join-btn {
+    justify-self: start;
+  }
+  /* end */
 
   /* Landing page navlinks */
-
   .landing-page-navlinks-toggle-btns {
     display: none;
   }
@@ -932,7 +933,7 @@ Landing Page
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 1.5rem;
+    gap: 1.8rem;
     padding: 0;
     background: transparent;
     backdrop-filter: none;
@@ -945,9 +946,9 @@ Landing Page
   }
 
   .landing-page-login-btn {
-    border: 1px solid hsl(7, 100%, 54%);
-    padding: 0.4rem 1.5rem;
-    border-radius: 5px;
+    border: none;
+    padding: 0.5rem 1.5rem;
+    border-radius: 30px;
     background: var(--orange-57);
     color: white !important;
   }
@@ -1039,11 +1040,11 @@ Landing Page
 
   .landing-page-join-btn {
     justify-self: start;
-    padding: 0.6rem 1.5rem;
+    padding: 1rem 2rem;
     text-align: center;
     background: hsl(7, 100%, 54%);
     color: hsl(0, 0%, 100%);
-    border-radius: 5px;
+    border-radius: 30px;
     letter-spacing: 0.05rem;
     margin-top: 1rem;
     font-weight: 500;
@@ -1053,7 +1054,7 @@ Landing Page
 @media screen and (min-width: 970px) {
   .landing-page-featured-posts {
     grid-template-columns: repeat(3, 1fr);
-    column-gap: 2rem;
+    /* column-gap: 2rem; */
   }
 
   .landing-page-posts {
@@ -1063,33 +1064,47 @@ Landing Page
 }
 
 @media screen and (min-width: 1000px) {
-
   .landing-page-featured-posts-container {
     padding: 3rem 0;
+    padding-bottom: 5rem;
   }
 
   .landing-page-featured-posts-wrapper {
     gap: 2rem;
   }
   
-  .landing-page-join-btn {
-    padding: 0.8rem 2rem;
-  } 
-
+  .landing-page-featured-post-header-container {
+    align-items: start;
+  }
+  
+  .landing-page-featured-posts-header, 
+  .landing-featured-posts-text{
+    text-align: start;
+  }
+  
   .landing-page-posts-container{
-    padding: 3rem 0;
+    padding: 5rem 0;
   }
 
   .landing-page-posts-wrapper {
     gap: 2rem;
   }
 
+  .landing-page-post-header-container {
+    align-items: start;
+  }
+  
+  .landing-page-posts-header,
+  .landing-page-posts-text {
+    text-align: start;
+  }
+  
   .landing-page-topics-wrapper {
-    padding: 3rem 0;
+    padding: 5rem 0;
   }
 
   .landing-page-email-sub-form-wrapper {
-    padding: 3rem 0;
+    padding: 5rem 0;
   }
 
   .landing-page-topics-container {
@@ -1122,15 +1137,15 @@ Landing Page
 
 @media screen and (min-width: 1200px) {
  
-  .landing-page-featured-posts {
+  /* .landing-page-featured-posts {
     gap: 1rem;
-  }
+  } */
 
   .landing-page-featured-post {
     position: relative;
     border-radius: 15px;
     padding: 0;
-    border: none
+    box-shadow: 3px 3px 10px -1px var(--black-70);
   }
 
   .landing-page-featured-post-image-container,
@@ -1173,7 +1188,7 @@ Landing Page
   }
 
   .landing-page-featured-post-read-post {
-    color: hsl(24, 100%, 50%);
+    color: var(--orange-light)
   }
 
   .landing-page-featured-post:nth-child(3) {
@@ -1204,10 +1219,10 @@ Landing Page
     max-width: 400px;
   }
 
-  .landing-page-posts {
+  /* .landing-page-posts {
     gap: 1rem;
     row-gap: 2rem;
-  }
+  } */
 
 }
 
@@ -1666,20 +1681,47 @@ Posts
   padding-top: 2rem;
 }
 /* end */
+.post-container__rows {
+  padding: 2rem 0;
+}
 
-.post-list-main-container {
+.post-container__rows:nth-child(even) {
+  background: var(--brown-90);
+}
+
+.post-container__posts-by-topic {
   display: grid;
-  align-items: start;
+  align-items: stretch;
   gap: 2rem;
   width: 90%;
   max-width: 1000px;
   margin: 0 auto;
-  padding: 1.5rem 0;
 }
 
-.post-container__posts {
-  display: grid;
-  gap: 2rem;
+.post-container__topic-container {
+  grid-column: 1 / -1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: start;
+  gap: 0.5rem;
+  text-align: center;
+}
+
+.post-container__topic-name {
+  color: var(--orange-10);
+  line-height: 1.3;
+  font-size: clamp(1.5rem, 3dvw + 1rem, 2.1rem);
+}
+
+.post-container__topic-text {
+  color: var(--orange-20);
+  letter-spacing: 0.07rem;
+  line-height: 1.5;
+  max-width: 500px;
+  margin: 0 auto;
+  font-size: 1.05rem;
+  font-weight: 500;
 }
 
 .post-container__post {
@@ -1689,6 +1731,7 @@ Posts
   box-shadow: 3px 3px 10px -1px var(--black-70);
   padding: 1rem;
   border-radius: 8px;
+  background: white;
 }
 
 .post-container__post-image-container {
@@ -1746,8 +1789,7 @@ Posts
   font-size: 1.1rem;
 }
 
-.post-container__post-like-count,
-.post-container__post-like-text {
+.post-container__post-like-count {
   font-size: 0.9rem;
 }
 
@@ -1762,42 +1804,8 @@ Posts
   font-size: 1rem;
 }
 
-.post-container__post-reply-count,
-.post-container__post-reply-text {
+.post-container__post-reply-count {
   font-size: 0.9rem;
-}
-
-/* Post List Side-bar Post Topics */
-.post-list-side-bar-topics-container {
-  display: none;
-  gap: 1.5rem;
-  max-width: 250px;
-  background: #ece4db;
-  padding: 1rem;
-  padding-bottom: 1.5rem;
-  border-radius: 8px;
-}
-
-.post-list-side-bar-topics__header {
-  font-weight: 700;
-  color: var(--orange-10);
-  font-size: 1.5rem;
-  letter-spacing: 0.03rem;
-}
-
-.post-list-side-bar-topics {
-  display: grid;
-  align-content: start;
-  gap: 1rem;
-}
-
-.post-list-side-bar-topics__topic {
-  position: relative;
-  display: grid;
-  align-items: start;
-  gap: 0.5rem;
-  border-radius: 20px;
-  transition: transform 300ms linear;
 }
 
 @media (hover) {
@@ -1860,8 +1868,31 @@ Posts
   font-size: 0.9rem;
 }
 
+.post-container__see-all-posts {
+  width: 90%;
+  max-width: 1000px;
+  margin: 0 auto;
+  display: flex;
+  align-items: start;
+  justify-content: center;
+  margin-top: 2rem;
+}
+
+.post-container__see-all-posts-btn {
+  justify-self: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  color: var(--orange-57);
+  padding: 0.5rem 1.5rem;
+  border-radius: 30px;
+  outline: 2px solid var(--orange-57);
+  font-weight: 500;
+}
+
 @media screen and (min-width: 570px) {
-	.post-container__posts {
+	.post-container__posts-by-topic {
     grid-template-columns: repeat(2, 1fr);
  	}
  	
@@ -1875,26 +1906,44 @@ Posts
   .post-container__post-title {
     font-size: clamp(1.1rem, 1vw + 1rem , 1.2rem);
   }
+
+  .post-container__see-all-posts {
+    margin-top: 4rem;
+  }
 }
 
 @media screen and (min-width:900px) {
-  .post-container__posts {
+  .post-container__posts-by-topic {
     grid-template-columns: repeat(3, 1fr);
  	}
 }
 
 @media screen and (min-width: 1000px) {
-  .post-list-main-container {
-    padding: 3rem 0;
+  .post-container__rows:first-child {
+    padding-top: 3rem;
+    padding-bottom: 5rem;
+  }
+
+  .post-container__rows {
+    padding: 5rem 0;
+  }
+
+  .post-container__topic-container {
+    align-items: start;
+    text-align: start;
+  }
+  
+  .post-container__topic-text {
+    margin: 0;
   }
 }
 
-@media screen and (min-width: 1200px) {
-	.post-container__posts {
+/* @media screen and (min-width: 1200px) {
+	.post-container__posts-by-topic {
     gap: 1rem;
     row-gap: 2rem;
   }
-}
+} */
 
 
 /* 
@@ -1961,7 +2010,7 @@ Post Detail
   padding: 1rem;
   gap: 1rem;
   border-radius: 8px;
-  box-shadow: 3px 3px 10px -1px var(--black-70);
+  box-shadow: 3px 3px 10px -1px var(--black-80);
 }
 
 .post-detail-container__post-image-container {
@@ -2209,21 +2258,21 @@ Post Detail
 }
 
 .post-detail-post-edit-btn-submit {
-  padding: 0.4rem 1rem;
+  padding: 0.5rem 1rem;
   background: var(--orange-57);
   color: white;
-  border-radius: 5px;
+  border-radius: 30px;
   font-size: 1rem;
   letter-spacing: 0.05rem;
   border: none;
 }
 
 .post-detail-post-edit-btn-cancel {
-  padding: 0.4rem 1rem;
+  padding: 0.5rem 1rem;
   background: none;
   color: white;
-  background: var(--black-40);
-  border-radius: 5px;
+  background: var(--black-30);
+  border-radius: 30px;
   font-size: 1rem;
   letter-spacing: 0.05rem;
   border: none
@@ -2253,11 +2302,14 @@ Post Detail
   line-height: 1.5;
   overflow-y: scroll;
   border: none;
-  color: var(--orange-20)
+  color: var(--orange-20);
+  border: 1px solid var(--black-80);
+  padding: 1.3rem;
 }
 
 .comment-form-textarea:focus {
-  outline: none;
+  outline: 2px solid var(--focus) !important;
+  border: 1px solid transparent;
 }
 
 .comment-btns {
@@ -2267,21 +2319,21 @@ Post Detail
   gap: 0.5rem
 }
 .comment-btn-submit {
-  padding: 0.4rem 1rem;
+  padding: 0.5rem 1rem;
   background: var(--orange-57);
   color: white;
-  border-radius: 5px;
+  border-radius: 30px;
   font-size: 1rem;
   letter-spacing: 0.05rem;
   border: none;
 }
 
 .comment-btn-cancel {
-  padding: 0.4rem 1rem;
+  padding: 0.5rem 1rem;
   background: none;
   color: white;
-  background: var(--black-40);
-  border-radius: 5px;
+  background: var(--black-30);
+  border-radius: 30px;
   font-size: 1rem;
   letter-spacing: 0.05rem;
   border: none
@@ -2445,15 +2497,17 @@ Post Detail
 /* end */
 
 /* Update comment form */
-.update-comment-form {
+.post-detail-update-comment-form {
   padding: 1.5rem;
   background: var(--brown-85);
   display: grid;
+  gap: 1rem;
+  align-content: start;
   border-radius: 8px;
 }
 
-.update-comment-form > textarea {
-  border: 1px solid var(--brown-70);
+.post-detail-update-comment-textarea {
+  border: none;
   width: 100%;
   resize: vertical;
   background: transparent;
@@ -2463,128 +2517,42 @@ Post Detail
   color: var(--orange-15);
   padding: 1.3rem;
   border-radius: 8px;
-}
-.update-comment-form > textarea:focus {
-  outline: none;
+  background: var(--brown-90)
 }
 
-.update-comment-form-btns {
+.post-detail-update-comment-textarea:focus {
+  outline: 2px solid var(--focus);
+}
+
+.post-detail-update-comment-form-btns {
   display: flex;
   justify-content: end;
   gap: 0.5rem
 }
 
-.update-comment-update-btn {
-  padding: 0.6rem 1rem;
-  background: orangered;
+.post-detail-update-comment-update-btn {
+  padding: 0.5rem 1rem;
+  background: var(--orange-57);
   color: white;
   text-align: center;
-  border-radius: 5px;
+  border-radius: 30px;
   font-size: 1rem;
   font-weight: 500;
   border: none;
   cursor: pointer;
 }
 
-.update-comment-cancel-btn {
-  padding: 0.6rem 1rem;
-  background: rgb(78, 78, 78);
+.post-detail-update-comment-cancel-btn {
+  padding: 0.5rem 1rem;
+  background: var(--black-30);
   color: white;
   text-align: center;
-  border-radius: 5px;
+  border-radius: 30px;
   font-size: 1rem;
   font-weight: 500;
   border: none;
   cursor: pointer;
 }
-/* end */
-
-/* Post detail top posts */
-.top-posts {
-  display: none;
-  gap: 1rem;
-  align-self: start;
-  border-radius: 8px;
-  padding: 1rem;
-  background: #ece4db;
-}
-
-.top-posts__header {
-  color: var(--orange-10);
-  grid-template-columns: 1 / -1;
-  margin-bottom: 0.5rem;
-}
-
-.top-posts__post {
-  display: grid;
-  gap: 0.5rem;
-  align-content: start;
-  margin-bottom: 0.5rem;
-}
-
-.top-posts__img-wrapper {
-  border-radius: 8px;
-}
-
-.top-posts__img {
-  width: 100%;
-  height: auto;
-  display: block;
-  border-radius: 8px;
-}
-
-.top-posts__text-wrapper {
-  display: grid;
-  gap: 0.2rem;
-}
-
-.top-posts__post-title {
-  color: var(--orange-10);
-  letter-spacing: 0.05rem;
-  line-height: 1.2;
-  font-weight: 600;
-}
-
-.top-posts__post-content {
-  color: var(--orange-20);
-  letter-spacing: 0.05rem;
-  line-height: 1.5;
-}
-
-.top-posts__read-more {
-  color: var(--orange-57)
-}
-
-.top-posts__btns-wrapper {
-  position: relative;
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-}
-
-.top-posts__num-of-like-btn,
-.top-posts__num-of-comments-btn {
-  display: flex;
-  align-items: center;
-  gap: 0.3rem;
-  color: var(--black-50);
-  background: none;
-  border: none;
-}
-
-.top-posts__num-of-like-btn > i{
-  font-size: 1.1rem;
-}
-
-.top-posts__num-of-comments-btn > i {
-  font-size: 1rem;
-}
-
-.top-posts__num-of-like-btn > span ,
-.top-posts__num-of-comments-btn > span {
-  font-size: 0.9rem;
-}
-
 /* end */
 
 @media screen and (min-width: 421px) {
