--- a/pet_blog/src/index.css
+++ b/pet_blog/src/index.css
@@ -24,6 +24,9 @@
   --orange-57: hsl(7, 100%, 50%);
   --black-100: rgb(100, 100, 100);
 
+  /* Section header text */
+  --section-header: hsl(19, 100%, 47%);
+
   /* Error text */
   --red-45: hsl(9, 100%, 45%);
 
@@ -370,7 +373,7 @@ Landing Page
 }
 
  .landing-page-featured-posts-wrapper {
-  width: 90%;
+  width: 95%;
   max-width: 1000px;
   margin: 0 auto;
   display: grid;
@@ -387,7 +390,7 @@ Landing Page
 
 .landing-page-featured-posts-header {
   text-wrap: pretty;
-  color: var(--orange-10);
+  color: var(--section-header);
   line-height: 1.3;
   text-align: center;
   font-size: clamp(1.5rem, 3vw + 1rem, 2rem);
@@ -412,28 +415,25 @@ Landing Page
 .landing-page-featured-post {
   display: grid;
   align-content: start;
-  gap: 1rem;
-
-  box-shadow: 3px 3px 10px -1px var(--black-80);
-  padding: 1rem;
-  border-radius: 8px;
+  gap: 0.8rem;
 }
 
 .landing-page-featured-post-image-container {
-  border-radius: 8px;
+  position: relative;
+  border-radius: 10px;
 }
 
 .landing-page-featured-post-image{
   width: 100%;
   height: auto;
   display: block;
-  border-radius: 8px;
+  border-radius: 10px;
 }
 
 .landing-page-featured-post-text-content {
   display: grid;
   align-content: start;
-  gap: 0.5rem;
+  gap: 0.3rem;
 }
 
 .landing-page-featured-post-title {
@@ -447,13 +447,31 @@ Landing Page
 .landing-page-featured-post-content {
   letter-spacing: 0.07rem;
   color: var(--orange-20);
-  line-height: 1.5;
+  line-height: 1.4;
   text-wrap: pretty;
 }
 
 .landing-page-featured-post-read-post {
   text-decoration: underline;
   color: var(--orange-57);
+}
+
+.mobile-landing-page-featured-post-like {
+  position: absolute;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  border-radius: 10px;
+  align-items: end !important;
+  padding: 0.5rem 1rem;
+  margin-top: 0 !important;
+  background: linear-gradient(to top, rgb(0, 0, 0), rgba(0, 0, 0, 0));
+}
+
+.lg-landing-page-featured-post-like {
+  display: none !important;
 }
 
 .landing-page-featured-post-like {
@@ -463,19 +481,20 @@ Landing Page
   margin-top: 0.3rem;
 }
 
+
+
 .landing-page-featured-post-like-container {
   display: flex;
   align-items: center;
   gap: 0.3rem;
-  color: var(--black-50);
+  color: var(--black-70);
 }
 
 .landing-page-featured-post-clap {
-  font-size: 1.1rem;
+  font-size: 1rem;
 }
 
-.landing-page-featured-post-like-count,
-.landing-page-featured-post-like-text {
+.landing-page-featured-post-like-count {
   font-size: 0.9rem;
 }
 
@@ -483,15 +502,14 @@ Landing Page
   display: flex;
   align-items: center;
   gap: 0.3rem;
-  color: var(--black-50);
+  color: var(--black-70);
 }
 
 .landing-page-featured-post-num-of-post {
-  font-size: 1rem;
+  font-size: 0.9rem;
 }
 
-.landing-page-featured-post-reply-count,
-.landing-page-featured-post-reply-text {
+.landing-page-featured-post-reply-count {
   font-size: 0.9rem;
 }
 
@@ -505,7 +523,7 @@ Landing Page
 }
 
 .landing-page-topics-container {
-  width: 90%;
+  width: 95%;
   max-width: 1000px;
   margin: 0 auto;
   display: grid;
@@ -524,7 +542,7 @@ Landing Page
 
 .landing-page-topic-header {
   text-wrap: pretty;
-  color: var(--orange-10);
+  color: var(--section-header);
   line-height: 1.3;
   font-size: clamp(1.5rem, 3vw + 1rem, 2rem);
 }
@@ -551,7 +569,6 @@ Landing Page
   gap: 0.8rem;
   border-radius: 20px;
   transition: transform 200ms linear;
-  box-shadow: 3px 3px 10px -1px var(--black-30);
 }
 
 @media (hover) {
@@ -621,7 +638,7 @@ Landing Page
 }
 
 .landing-page-posts-wrapper {
-  width: 90%;
+  width: 95%;
   max-width: 1000px;
   margin: 0 auto;
   display: grid;
@@ -638,7 +655,7 @@ Landing Page
 
 .landing-page-posts-header {
   text-wrap: pretty;
-  color: var(--orange-10);
+  color: var(--section-header);
   line-height: 1.3;
   text-align: center;
   font-size: clamp(1.5rem, 3vw + 1rem, 2rem);
@@ -663,28 +680,25 @@ Landing Page
 .landing-page-post {
   display: grid;
   align-content: start;
-  gap: 1rem;
-
-  box-shadow: 3px 3px 10px -1px var(--black-80);
-  padding: 1rem;
-  border-radius: 8px;
+  gap: 0.8rem;
 }
 
 .landing-page-post-image-container {
-  border-radius: 8px;
+  position: relative;
+  border-radius: 10px;
 }
 
 .landing-page-post-image{
   width: 100%;
   height: auto;
   display: block;
-  border-radius: 8px;
+  border-radius: 10px;
 }
 
 .landing-page-post-text-content {
   display: grid;
   align-content: start;
-  gap: 0.5rem;
+  gap: 0.3rem;
 }
 
 .landing-page-post-title {
@@ -698,7 +712,7 @@ Landing Page
 .landing-page-post-content {
   letter-spacing: 0.07rem;
   color: var(--orange-20);
-  line-height: 1.5;
+  line-height: 1.4;
   text-wrap: pretty;
 }
 
@@ -708,25 +722,33 @@ Landing Page
 }
 
 .landing-page-post-like {
+  position: absolute;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  
   display: flex;
-  align-items: center;
+  align-items: end;
   gap: 1rem;
-  margin-top: 0.3rem;
+  padding: 0.5rem 1rem;
+  border-radius: 10px;
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.8),rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
 }
 
 .landing-page-post-like-container {
   display: flex;
   align-items: center;
   gap: 0.3rem;
-  color: var(--black-50);
+  color: var(--black-70);
 }
 
 .landing-page-post-clap {
-  font-size: 1.1rem;
+  font-size: 1rem;
 }
 
-.landing-page-post-like-count,
-.landing-page-post-like-text {
+.landing-page-post-like-count {
   font-size: 0.9rem;
 }
 
@@ -734,15 +756,14 @@ Landing Page
   display: flex;
   align-items: center;
   gap: 0.3rem;
-  color: var(--black-50);
+  color: var(--black-70);
 }
 
 .landing-page-post-num-of-post {
-  font-size: 1rem;
+  font-size: 0.9rem;
 }
 
-.landing-page-post-reply-count,
-.landing-page-post-reply-text {
+.landing-page-post-reply-count {
   font-size: 0.9rem;
 }
 
@@ -794,7 +815,7 @@ Landing Page
 
 .landing-page-email-form-header {
   text-wrap: pretty;
-  color: var(--orange-10);
+  color: var(--section-header);
   line-height: 1.3;
   font-size: clamp(1.5rem, 3vw + 1rem, 2rem);
 }
@@ -852,6 +873,10 @@ Landing Page
 @media screen and (min-width: 570px) {
 
   /* Landing page featured posts */
+  .landing-page-featured-posts-wrapper {
+    width: 90%;
+  }
+
   .landing-page-featured-posts {
     grid-template-columns: repeat(2, 1fr);
   }
@@ -869,6 +894,10 @@ Landing Page
   /* end */
 
   /* Landing page latest posts  */
+  .landing-page-posts-wrapper {
+    width: 90%;
+  }
+
   .landing-page-posts {
     grid-template-columns: repeat(2, 1fr);
   }
@@ -891,6 +920,10 @@ Landing Page
   /* end */
 
   /* Landing page topics */
+  .landing-page-topics-container {
+    width: 90%;
+  }
+
   .landing-page-topic-name {
     font-size: clamp(1rem, 1vw + 1rem, 1.1rem);;
   }
@@ -1137,15 +1170,18 @@ Landing Page
 
 @media screen and (min-width: 1200px) {
  
-  /* .landing-page-featured-posts {
-    gap: 1rem;
-  } */
+  .mobile-landing-page-featured-post-like {
+    display: none !important;
+  }
+  
+  .lg-landing-page-featured-post-like {
+    display: flex !important;
+  }
 
   .landing-page-featured-post {
     position: relative;
     border-radius: 15px;
     padding: 0;
-    box-shadow: 3px 3px 10px -1px var(--black-70);
   }
 
   .landing-page-featured-post-image-container,
@@ -1671,7 +1707,7 @@ Posts
 ===== */
 
 /* message */
-.post-list-message {
+/* .post-list-message {
   color: hsl(128, 100%, 30%);
   letter-spacing: 0.07rem;
   font-weight: 500;
@@ -1679,7 +1715,7 @@ Posts
   max-width:1000px;
   margin: 0 auto;
   padding-top: 2rem;
-}
+} */
 /* end */
 .post-container__rows {
   padding: 2rem 0;
@@ -1693,7 +1729,7 @@ Posts
   display: grid;
   align-items: stretch;
   gap: 2rem;
-  width: 90%;
+  width: 95%;
   max-width: 1000px;
   margin: 0 auto;
 }
@@ -1709,9 +1745,9 @@ Posts
 }
 
 .post-container__topic-name {
-  color: var(--orange-10);
+  color: var(--section-header);
   line-height: 1.3;
-  font-size: clamp(1.5rem, 3dvw + 1rem, 2.1rem);
+  font-size: clamp(1.5rem, 3dvw + 1rem, 2rem);
 }
 
 .post-container__topic-text {
@@ -1727,28 +1763,25 @@ Posts
 .post-container__post {
   display: grid;
   align-content: start;
-  gap: 1rem;
-  box-shadow: 3px 3px 10px -1px var(--black-70);
-  padding: 1rem;
-  border-radius: 8px;
-  background: white;
+  gap: 0.8rem;
 }
 
 .post-container__post-image-container {
-  border-radius: 8px;
+  position: relative;
+  border-radius: 10px;
 }
 
 .post-container__post-image{
   width: 100%;
   height: auto;
   display: block;
-  border-radius: 8px;
+  border-radius: 10px;
 }
 
 .post-container__post-text-content {
   display: grid;
-  align-content: start;
-  gap: 0.5rem;
+  align-items: start;
+  gap: 0.3rem;
 }
 
 .post-container__post-title {
@@ -1762,7 +1795,7 @@ Posts
 .post-container__post-content {
   letter-spacing: 0.07rem;
   color: var(--orange-20);
-  line-height: 1.5;
+  line-height: 1.4;
   text-wrap: pretty;
 }
 
@@ -1772,21 +1805,30 @@ Posts
 }
 
 .post-container__post-like {
+  position: absolute;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
   display: flex;
-  align-items: center;
+  align-items: end;
   gap: 1rem;
-  margin-top: 0.3rem;
+  padding: 0.5rem 1rem;
+  border-radius: 10px;
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0));
 }
 
 .post-container__post-like-container {
   display: flex;
   align-items: center;
   gap: 0.3rem;
-  color: var(--black-50);
+  color: var(--black-70);
 }
 
 .post-container__clapping {
-  font-size: 1.1rem;
+  font-size: 1rem;
 }
 
 .post-container__post-like-count {
@@ -1797,11 +1839,11 @@ Posts
   display: flex;
   align-items: center;
   gap: 0.3rem;
-  color: var(--black-50);
+  color: var(--black-70);
 }
 
 .post-container__num-of-post {
-  font-size: 1rem;
+  font-size: 0.9rem;
 }
 
 .post-container__post-reply-count {
@@ -1894,6 +1936,7 @@ Posts
 @media screen and (min-width: 570px) {
 	.post-container__posts-by-topic {
     grid-template-columns: repeat(2, 1fr);
+    width: 90%;
  	}
  	
  	.post-container__post-image {
@@ -1916,6 +1959,7 @@ Posts
   .post-container__posts-by-topic {
     grid-template-columns: repeat(3, 1fr);
  	}
+
 }
 
 @media screen and (min-width: 1000px) {
@@ -1938,12 +1982,6 @@ Posts
   }
 }
 
-/* @media screen and (min-width: 1200px) {
-	.post-container__posts-by-topic {
-    gap: 1rem;
-    row-gap: 2rem;
-  }
-} */
 
 
 /* 
@@ -1979,17 +2017,6 @@ Post Detail
   line-height: 1.2;
 }
 
-.post-detail-back-to-btn {
-  justify-self: start;
-  padding: 0.5rem 1rem;
-  display: flex;
-  align-items: center;
-  gap: 0.5rem;
-  border-radius: 8px;
-  color: var(--orange-57);
-  border: 2px solid var(--orange-57)
-}
-
 .post-detail-main-container {
   min-height: 100dvh;
   width: 90%;
@@ -2004,13 +2031,31 @@ Post Detail
   gap: 2rem;
 }
 
+.post-detail-back-to-btn {
+  justify-self: start;
+  padding: 0.5rem 1rem;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  border-radius: 8px;
+  color: var(--orange-57);
+  border: 2px solid var(--orange-57)
+}
+
+.post-detail-container-contents {
+  display: grid;
+  align-self: start;
+  gap: 1rem;
+  /* border: 2px solid red; */
+  padding: 2rem;
+  background: var(--brown-90);
+  border-radius: 10px;
+}
+
 .post-detail-container__post-detail {
   display: grid;
   align-items: start;
-  padding: 1rem;
   gap: 1rem;
-  border-radius: 8px;
-  box-shadow: 3px 3px 10px -1px var(--black-80);
 }
 
 .post-detail-container__post-image-container {
@@ -2043,7 +2088,7 @@ Post Detail
   letter-spacing: 0.07rem;
   line-height: 1.5;
   text-wrap: pretty;
-  color: var(--orange-20);
+  color: var(--orange-15);
 }
 
 .post-detail-container__like-and-reply {
@@ -2348,7 +2393,7 @@ Post Detail
 .post-detail-comments__comment {
   display: grid;
   gap: 1rem;
-  background: var(--brown-90);
+  background: var(--brown-80);
   padding: 1.5rem;
   border-radius: 8px;
 }
@@ -3068,15 +3113,15 @@ Create Post
 TOPIC POSTS
 =========== */
 .topic-posts-container {
-  padding: 1.5rem 0;
+  padding: 2rem 0;
   min-height: 100dvh;
   display: grid;
   align-content: start;
-  gap: 1.5rem;
+  gap: 2rem;
 }
 
 .topic-posts-navbar {
-  width: 90%;
+  width: 95%;
   max-width: 1000px;
   margin: 0 auto;
   display: flex;
@@ -3151,191 +3196,135 @@ TOPIC POSTS
   display: grid;
   gap: 2rem;
   align-content: start;
-  width: 90%;
+  width: 95%;
   max-width: 1000px;
   margin: 0 auto;
 }
 
 .topic-posts-container__post {
-  position: relative;
   display: grid;
-  align-items: start;
+  align-content: start;
   gap: 0.8rem;
-  padding: 1rem;
-  border-radius: 8px;
-  background: rgb(255, 255, 255);
-  box-shadow: 3px 3px 6px -1px rgb(170, 170, 170);
-  transition: transform 200ms linear;
 }
 
 .topic-posts-container__post-image-container {
   position: relative;
+  border-radius: 10px;
 }
 
 .topic-posts-container__post-image{
   width: 100%;
-  height: 100;
-  aspect-ratio: 1/1;
-  object-fit: cover;
+  height: auto;
   display: block;
-}
-
-.topic-posts-container__post-image-color-overlay {
-  position: absolute;
-  z-index: 2;
-  top: 0;
-  left: 0;;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.300);
-}
-
-.topic-posts-container__post-text-content {
-  display: grid;
-  align-items: start;
-  gap: 0.8rem;
-}
-
-.topic-posts-container__author-and-date {
-  display: grid;
-}
-
-.topic-posts-container__post-author {
-  font-weight: 500;
-  font-size: 0.9rem;
-  color: rgb(75, 75, 75);
-}
-
-.topic-posts-container__date-posted {
-  color: rgb(109, 109, 109);
-  font-size: 0.9rem;
-}
-
-.topic-posts-container__date-and-like {
-  display: flex;
-  align-items: center;
-  gap: 0.8rem;
-  margin-top: 0.5rem;
+  border-radius: 10px;
 }
 
 .topic-posts-container__post-like {
+  position: absolute;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+
   display: flex;
-  align-items: center;
+  align-items: end;
   gap: 1rem;
-  letter-spacing: 0.05rem;
-  background: none;
-  border: none;
+  padding: 0.5rem 1rem;
+  border-radius: 10px;
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0));
 }
 
-.post-like-container {
+.topic-post-like-container {
   display: flex;
   align-items: center;
   gap: 0.3rem;
+  color: var(--black-70)
 }
 
-.post-like {
-  color: rgb(131, 131, 131);
+.topic-post-like {
   font-size: 1rem;
-  transition: 300ms color linear;
 }
 
-.post-like-count,
-.post-like-text {
+.topic-post-like-count{
   font-size: 0.9rem;
-  padding-top: 0.2rem;
-  color: rgb(143, 143, 143);
 }
 
 .topic-posts-container__num-of-replies-container {
   display: flex;
   align-items: center;
   gap: 0.3rem;
+  color: var(--black-70)
 }
 
 .topic-posts-container__num-of-post {
-  color: rgb(158, 158, 158);
-  font-size: 1rem;
+  font-size: 0.9rem;
 }
 
-.post-reply-count,
-.post-reply-text {
+.topic-post-reply-count{
   font-size: 0.9rem;
-  color: rgb(143, 143, 143);
+}
+
+.topic-posts-text-container {
+  display: grid;
+  align-content: start;
+  gap: 0.3rem;
 }
 
 .topic-posts-container__post-title {
-  color: rgb(44, 44, 44);
-  line-height: 1.4;
-  letter-spacing: 0.04rem;
-  font-size: 1.25rem;
+  color: var(--orange-10);
+  line-height: 1.3;
+  font-size: clamp(1.1rem, 1vw + 1rem , 1.7rem);
   font-weight: 600;
+  text-wrap: pretty;
 }
 
 .topic-posts-container__post-content {
   letter-spacing: 0.07rem;
-  color: rgb(59, 59, 59);
+  color: var(--orange-20);
+  text-wrap: pretty;
+  line-height: 1.4;
 }
 
-.topic-posts-container__post-read-more-btn {
-  align-self: end;
-  padding: 0.6rem 1rem;
-  background: orangered;
-  color: white;
-  text-align: center;
-  border-radius: 5px;
-  font-size: 1rem;
-  margin-top: 0.5rem;
-  font-weight: 500;
-  border: none;
-  cursor: pointer;
+.topic-post-container__post-read-more-btn {
+  color: var(--orange-57);
+  text-decoration: underline;
 }
 
-.topic-posts-container__post-topic {
-  position: absolute;
-  z-index: 2;
-  top: 16px;
-  right: 16px;
-  background: rgb(148, 0, 148);
-  padding: 0.3rem 0.5rem;
-  color: white;
-  border-radius: 5px;
-  font-size: 0.9rem;
-  font-weight: 500;
+@media screen and (min-width: 570px) {
+  .topic-posts-navbar {
+    width: 90%;
+  }
 
-  display: flex;
-  gap: 0.5rem;
-  align-items: center;
-  letter-spacing: 0.05rem;
-}
-
-.topic-posts-container__post-topic > i {
-  font-size: 0.8rem;
-  margin-top: 0.1rem
-}
-
-@media screen and (min-width: 700px) {
-  .topic-posts-container__post {
-    display: flex;
-    gap: 2rem
+  .topic-posts-container__posts {
+    width: 90%;
+    grid-template-columns: repeat(2, 1fr);
   }
 
   .topic-posts-container__post-image{
-    width: 200px;
+    width: 100%;
+    height: 100%;
+    aspect-ratio: 3/2;
+    object-fit: cover;
   }
 
-  .topic-posts-container__post-read-more-btn {
-    justify-self: start;
-    padding: 0.4rem 1rem;
+  .topic-posts-container__post-title {
+    font-size: clamp(1.1rem, 1vw + 1rem , 1.2rem);
   }
+}
+
+@media screen and (min-width:900px) {
+  .topic-posts-container__posts {
+    grid-template-columns: repeat(3, 1fr);
+ 	}
 }
 
 @media screen and (min-width: 1000px) {
   .topic-posts-container {
     padding: 3rem 0;
-    gap: 2rem;
   }
+  
 }
-
 /* 
 =============
 USER REGISTER
@@ -3444,9 +3433,8 @@ USER REGISTER
 USER LOGIN
 ========== */
 .user-login-main-container {
-  min-height: calc(100dvh - 63px);
-  background: linear-gradient(to right, hsla(0, 0%, 0%, 0.9),rgba(0, 0, 0, 0.2)), 
-    url('images/bg_img.webp');
+  min-height: calc(100dvh - 57.19px);
+  background:  url('images/bg_img.webp');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -3455,22 +3443,17 @@ USER LOGIN
 }
 
 .user-login-container {
-  width: 90%;
-  margin: 0 auto;
-  max-width: 1200px;
-
   display: grid;
-  align-items: center;
 }
 
 .user-login {
   display: grid;
-  align-content: start;
+  align-content: center;
   gap: 2rem;
-  max-width: 450px;
+  background: linear-gradient(to top,rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.2));
+  backdrop-filter: blur(4px);
   padding: 1.3rem;
-  background: hsla(9, 52%, 68%, 0.158);
-  border-radius: 10px;
+  padding-top: 5rem;
 }
 
 .user-login__header {
@@ -3551,7 +3534,21 @@ USER LOGIN
   text-decoration: underline;
 }
 
-
+@media screen and (min-width: 600px) {
+  .user-login-container {
+    width: 90%;
+    max-width: 1000px;
+    margin: 0 auto;
+    align-items: center;
+  }
+  
+  .user-login {
+    background: linear-gradient(to top,rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.4));
+    max-width: 450px;
+    padding-top: 1.3rem;
+    border-radius: 10px;
+  }
+}
 /* 
 ======
 FOOTER
