--- a/pet_blog/src/index.css
+++ b/pet_blog/src/index.css
@@ -18,11 +18,10 @@
   --black-90: hsl(0, 0%, 90%);
   --black-95: hsl(0, 0%, 95%);
   
-
   /* Button Background */
-  --orange-light:hsl(24, 100%, 50%);
-  --orange-57: hsl(7, 100%, 50%);
-  --black-100: rgb(100, 100, 100);
+  --orange-light: hsl(7, 100%, 57%);
+  --orange-50: hsl(7, 100%, 50%);
+  
 
   /* Section header text */
   --section-header: hsl(19, 100%, 47%);
@@ -34,11 +33,12 @@
   --success-text: rgb(57, 187, 57);
 
   /* Orange */
-  --orange-10: hsl(10, 30%, 20%);
-  --orange-15: hsl(10, 30%, 25%);
-  --orange-20: hsl(10, 30%, 30%);
+  --purplish-brown-15: hsl(10, 30%, 15%);
+  --purplish-brown-20: hsl(10, 30%, 20%);
+  --purplish-brown-30: hsl(10, 30%, 30%);
   --orange-25: hsl(10, 30%, 35%);
   --orange-30: hsl(10, 30%, 40%);
+
 
   /* Brown */
   --brown-20: hsl(27, 27%, 20%);
@@ -276,7 +276,7 @@ Landing Page
 }
 
 .landing-page-navlink {
-  color: var(--orange-20);
+  color: var(--purplish-brown-20);
   font-size: 1rem;
   padding: 0 2rem;
   text-align: start;
@@ -360,7 +360,7 @@ Landing Page
   justify-self: center;
   padding: 0.5rem 1.5rem ;
   text-align: center;
-  background: var(--orange-57);
+  background: var(--orange-50);
   color: hsl(0, 0%, 100%);
   border-radius: 30px;
   letter-spacing: 0.05rem;
@@ -399,7 +399,7 @@ Landing Page
 .landing-featured-posts-text {
   letter-spacing: 0.05rem;
   line-height: 1.5;
-  color: var(--orange-20);
+  color: var(--purplish-brown-20);
   max-width: 500px;
   font-weight: 500;
   text-align: center;
@@ -437,7 +437,7 @@ Landing Page
 }
 
 .landing-page-featured-post-title {
-  color: var(--orange-10);
+  color: var(--purplish-brown-15);
   line-height: 1.3;
   font-size: clamp(1.1rem, 1vw + 1rem , 1.7rem);
   font-weight: 600;
@@ -446,14 +446,14 @@ Landing Page
 
 .landing-page-featured-post-content {
   letter-spacing: 0.07rem;
-  color: var(--orange-20);
+  color: var(--purplish-brown-20);
   line-height: 1.4;
   text-wrap: pretty;
 }
 
 .landing-page-featured-post-read-post {
   text-decoration: underline;
-  color: var(--orange-57);
+  color: var(--orange-50);
 }
 
 .mobile-landing-page-featured-post-like {
@@ -550,7 +550,7 @@ Landing Page
 .landing-page-topic-text {
   letter-spacing: 0.05rem;
   line-height: 1.5;
-  color: var(--orange-20);
+  color: var(--purplish-brown-20);
   max-width: 400px;
   font-weight: 500;
   font-size: 1.05rem;
@@ -664,7 +664,7 @@ Landing Page
 .landing-page-posts-text {
   letter-spacing: 0.05rem;
   line-height: 1.5;
-  color: var(--orange-20);
+  color: var(--purplish-brown-20);
   max-width: 500px;
   font-weight: 500;
   text-align: center;
@@ -702,7 +702,7 @@ Landing Page
 }
 
 .landing-page-post-title {
-  color: var(--orange-10);
+  color: var(--purplish-brown-15);
   line-height: 1.3;
   font-size: clamp(1.1rem, 1vw + 1rem , 1.7rem);
   font-weight: 600;
@@ -711,13 +711,13 @@ Landing Page
 
 .landing-page-post-content {
   letter-spacing: 0.07rem;
-  color: var(--orange-20);
+  color: var(--purplish-brown-20);
   line-height: 1.4;
   text-wrap: pretty;
 }
 
 .landing-page-post-read-more {
-  color: var(--orange-57);
+  color: var(--orange-50);
   text-decoration:underline;
 }
 
@@ -773,16 +773,16 @@ Landing Page
   align-items: center;
   justify-content: center;
   gap: 0.5rem;
-  color: var(--orange-57);
+  color: var(--orange-50);
   padding: 0.5rem 1.5rem;
   border-radius: 30px;
-  outline: 2px solid var(--orange-57);
+  outline: 2px solid var(--orange-50);
   font-weight: 500;
 }
 
 @media (hover) {
   .landing-page-post-see-all-posts:hover {
-    background: var(--orange-57);
+    background: var(--orange-50);
     color: white;
   }
 }
@@ -824,7 +824,7 @@ Landing Page
   text-align: center;
   letter-spacing: 0.07rem;
   line-height: 1.5;
-  color: var(--orange-20);
+  color: var(--purplish-brown-20);
   text-wrap: pretty;
   font-size: 1.05rem;
   max-width: 400px;
@@ -844,14 +844,14 @@ Landing Page
 }
 
 .landing-page-email-sub-form > input:focus {
-  outline: 2px solid var(--orange-57);
+  outline: 2px solid var(--orange-50);
 }
 
 .landing-page-email-sub-btn {
   padding: 0.8rem 1rem;
   border-radius: 5px;
   border: none;
-  background: var(--orange-57);
+  background: var(--orange-50);
   font-weight: 500;
   color: white;
   font-size: 1rem;
@@ -982,7 +982,7 @@ Landing Page
     border: none;
     padding: 0.5rem 1.5rem;
     border-radius: 30px;
-    background: var(--orange-57);
+    background: var(0);
     color: white !important;
   }
 
@@ -1294,7 +1294,7 @@ NAVBAR
 }
 
 .navbar-brand-link:focus {
-  color: var(--orange-10);
+  color: var(--purplish-brown-20);
 }
 
 .navbar-brand-logo {
@@ -1394,13 +1394,13 @@ NAVBAR
 }
 
 .navbar-topic-link {
-  color: var(--orange-10);
+  color: var(--purplish-brown-20);
   padding: 1.3rem 1.3rem 0 1.3rem;
 }
 
 @media (hover) {
   .navbar-topic-link:hover {
-    color: var(--orange-57);
+    color: var(--orange-50);
   }
 }
 
@@ -1409,7 +1409,7 @@ NAVBAR
 }
 
 .active-navbar-topic-link {
-  color: var(--orange-57);
+  color: var(--orange-50);
   font-weight: 600;
 }
 
@@ -1444,13 +1444,13 @@ NAVBAR
 }
 
 .mobile-navlinks-authenticated-user > span {
-  color: var(--orange-10);
+  color: var(--purplish-brown-20);
   font-size: 1rem;
 }
 
 .mobile-navlinks-authenticated-user > i {
   margin-left: 0.5rem;
-  color: var(--orange-10)
+  color: var(--purplish-brown-20)
 }
 
 .mobile-authenticated-user-links {
@@ -1478,14 +1478,14 @@ NAVBAR
 
 .navbar-navlink {
   width: 100%;
-  color: var(--orange-20);
+  color: var(--purplish-brown-20);
   font-size: 1rem;
   padding: 0 2rem;
   text-wrap: nowrap !important;
 }
 
 .navbar-active-navlink {
-  color: var(--orange-57);
+  color: var(--orange-50);
   font-weight: 600;
 }
 
@@ -1572,7 +1572,7 @@ NAVBAR
 
   .lg-authenticated-user > 
   .navbar-navlink {
-    color: var(--orange-10);
+    color: var(--purplish-brown-20);
     padding: 1.3rem 1.3rem 0 1.3rem;
     height: initial;
   }
@@ -1580,7 +1580,7 @@ NAVBAR
   @media (hover) {
     .lg-authenticated-user > 
     .navbar-navlink:hover {
-      color: var(--orange-57) !important
+      color: var(--orange-50) !important
     }
   }
 
@@ -1625,7 +1625,7 @@ NAVBAR
   }
 
   .navbar-topic-link {
-    color: var(--orange-10);
+    color: var(--purplish-brown-20);
     padding: 1.3rem 1.3rem 0 1.3rem;
   }
 
@@ -1634,7 +1634,7 @@ NAVBAR
   }
 
   .active-navbar-topic-link {
-    color: var(--orange-57);
+    color: var(--orange-50);
     font-weight: 600;
   }
 
@@ -1686,7 +1686,7 @@ NAVBAR
   justify-self: center;
   text-align: center;
   grid-column: 1 / -1;
-  color: var(--orange-10);
+  color: var(--purplish-brown-20);
   font-weight: 600;
   line-height: 1.2;
   font-size: clamp(1.4rem, 2vw + 1rem, 1.8rem);
@@ -1751,7 +1751,7 @@ Posts
 }
 
 .post-container__topic-text {
-  color: var(--orange-20);
+  color: var(--purplish-brown-20);
   letter-spacing: 0.07rem;
   line-height: 1.5;
   max-width: 500px;
@@ -1785,7 +1785,7 @@ Posts
 }
 
 .post-container__post-title {
-  color: var(--orange-10);
+  color: var(--purplish-brown-15);
   line-height: 1.3;
   font-size: clamp(1.1rem, 1vw + 1rem , 1.7rem);
   font-weight: 600;
@@ -1794,13 +1794,13 @@ Posts
 
 .post-container__post-content {
   letter-spacing: 0.07rem;
-  color: var(--orange-20);
+  color: var(--purplish-brown-20);
   line-height: 1.4;
   text-wrap: pretty;
 }
 
 .post-container__post-read-more-btn {
-  color: var(--orange-57);
+  color: var(--orange-50);
   text-decoration:underline;
 }
 
@@ -1926,10 +1926,11 @@ Posts
   align-items: center;
   justify-content: center;
   gap: 0.5rem;
-  color: var(--orange-57);
+  color: var(0);
   padding: 0.5rem 1.5rem;
   border-radius: 30px;
-  outline: 2px solid var(--orange-57);
+  outline: 2px solid var(--orange-50);
+  color: var(--orange-50);
   font-weight: 500;
 }
 
@@ -2038,8 +2039,8 @@ Post Detail
   align-items: center;
   gap: 0.5rem;
   border-radius: 8px;
-  color: var(--orange-57);
-  border: 2px solid var(--orange-57)
+  color: var(--orange-50);
+  border: 2px solid var(--orange-50)
 }
 
 .post-detail-container-contents {
@@ -2076,7 +2077,7 @@ Post Detail
 }
 
 .post-detail-container__post-title {
-  color: var(--orange-10);
+  color: var(--purplish-brown-15);
   line-height: 1.4;
   letter-spacing: 0.04rem;
   font-size: 1.25rem;
@@ -2088,7 +2089,7 @@ Post Detail
   letter-spacing: 0.07rem;
   line-height: 1.5;
   text-wrap: pretty;
-  color: var(--orange-15);
+  color: var(--purplish-brown-20);
 }
 
 .post-detail-container__like-and-reply {
@@ -2247,21 +2248,21 @@ Post Detail
 
 @media (hover) {
   .post-detail-container__post-like:hover {
-    color: var(--orange-57);
+    color: var(--orange-50);
   }
   .post-detail-reply:hover {
-    color: var(--orange-57);
+    color: var(--orange-50);
   }
   .post-detail-edit:hover {
-    color: var(--orange-57);
+    color: var(--orange-50);
   }
 
   .post-detail-btns-ellipsis:hover button i{
-    color: var(--orange-57) !important;
+    color: var(--orange-50) !important;
   }
 
   .post-detail-delete:hover * {
-    color: var(--orange-57) !important;
+    color: var(--orange-50) !important;
   }
 }
 
@@ -2279,7 +2280,7 @@ Post Detail
   padding: 0.8rem 1rem;
   border-radius: 8px;
   border: 1px solid var(--black-80);
-  color: var(--orange-10);
+  color: var(--purplish-brown-20);
   font-size: 1rem
 }
 
@@ -2291,7 +2292,7 @@ Post Detail
   line-height: 1.5;
   overflow-y: scroll;
   padding: 0.8rem 1rem;
-  color: var(--orange-20);
+  color: var(--purplish-brown-20);
   border: 1px solid var(--black-80);
 }
 
@@ -2304,7 +2305,7 @@ Post Detail
 
 .post-detail-post-edit-btn-submit {
   padding: 0.5rem 1rem;
-  background: var(--orange-57);
+  background: var(--orange-50);
   color: white;
   border-radius: 30px;
   font-size: 1rem;
@@ -2347,7 +2348,7 @@ Post Detail
   line-height: 1.5;
   overflow-y: scroll;
   border: none;
-  color: var(--orange-20);
+  color: var(--purplish-brown-20);
   border: 1px solid var(--black-80);
   padding: 1.3rem;
 }
@@ -2365,7 +2366,7 @@ Post Detail
 }
 .comment-btn-submit {
   padding: 0.5rem 1rem;
-  background: var(--orange-57);
+  background: var(--orange-50);
   color: white;
   border-radius: 30px;
   font-size: 1rem;
@@ -2428,7 +2429,7 @@ Post Detail
 .post-detail-comments__content {
   line-height: 1.6;
   letter-spacing: 0.07rem;
-  color: var(--orange-10);
+  color: var(--purplish-brown-20);
 }
 
 .post-detail-comment-btns {
@@ -2451,7 +2452,7 @@ Post Detail
 
 @media (hover) {
   .post-detail-comment-reply-btn:hover * {
-    color: var(--orange-57)
+    color: var(--orange-50)
   }
 }
 
@@ -2499,10 +2500,10 @@ Post Detail
 
 @media (hover) {
   .post-detail-comment-edit-btn:hover * {
-    color: var(--orange-57)
+    color: var(--orange-50)
   }
   .post-detail-comment-remove-btn:hover * {
-    color: var(--orange-57)
+    color: var(--orange-50)
   }
 }
 
@@ -2526,7 +2527,7 @@ Post Detail
 }
 
 .no-comment-text-container > h3 {
-  color: var(--orange-10);
+  color: var(--purplish-brown-20);
   font-weight: 600;
   line-height: 1.2;
   letter-spacing: 0.05rem;
@@ -2537,7 +2538,7 @@ Post Detail
   letter-spacing: 0.07rem;
   line-height: 1.5;
   text-wrap: pretty;
-  color: var(--orange-20);
+  color: var(--purplish-brown-20);
 }
 /* end */
 
@@ -2559,7 +2560,7 @@ Post Detail
   font-size: 1rem;
   letter-spacing: 0.07rem;
   line-height: 1.5;
-  color: var(--orange-15);
+  color: var(--purplish-brown-20);
   padding: 1.3rem;
   border-radius: 8px;
   background: var(--brown-90)
@@ -2577,7 +2578,7 @@ Post Detail
 
 .post-detail-update-comment-update-btn {
   padding: 0.5rem 1rem;
-  background: var(--orange-57);
+  background: var(--orange-50);
   color: white;
   text-align: center;
   border-radius: 30px;
@@ -2632,15 +2633,11 @@ Post Detail
   .post-detail-container__like-and-reply {
     gap: 1.5rem;
   }
-
-  /* .post-detail-comment-btns {
-    gap: 1.5rem;
-  } */
 }
 
 @media screen and (min-width: 1000px) {
   .post-detail-main-container {
-    padding: 3rem 0;
+    padding: 4rem 0;
   }
 }
 
@@ -2649,10 +2646,70 @@ Post Detail
 ========
 My Posts
 ======== */
+
+.my-posts-hero-container {
+  display: grid;
+  width: 90%;
+  margin: 0 auto;
+  max-width: 1000px;
+}
+
+.my-posts-header-contents {
+  display: grid;
+  align-self: center;
+  gap: 0.5rem;
+  max-width: 450px;
+}
+
+.my-posts-author-profile {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem
+}
+
+.my-posts-profile-img {
+  width: 40px;
+  aspect-ratio: 1/1;
+  object-fit: cover;
+  display: block;
+}
+
+.my-posts-username {
+  color: var(--black-80);
+  font-weight: 500;
+}
+
+.my-posts-header-contents > div {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.my-posts-num-of-posts,
+.my-posts-num-of-comments {
+  color: var(--black-80);
+  justify-self: start;
+  font-size: 0.9rem;
+  display: inline;
+}
+
+@media (hover) {
+  .my-posts-num-of-comments:hover {
+    font-weight: 600;
+    color: var(--orange-light)
+  }
+}
+
+.my-posts-hero-header {
+  color: white;
+  font-size: clamp(1.5rem, 5vw + 1rem, 3rem);
+  line-height: 1.2;
+}
+
 .my-posts-main-container {
   display: grid;
   align-content: start;
-  width: 90%;
+  width: 95%;
   max-width: 1000px;
   margin: 0 auto;
   padding: 2rem 0;
@@ -2672,6 +2729,7 @@ My Posts
 
 .my-posts-container__posts {
   display: grid;
+  align-items: start;
   gap: 2rem;
 }
 
@@ -2680,54 +2738,24 @@ My Posts
   display: grid;
   align-items: start;
   gap: 0.8rem;
-  padding: 1rem;
-  border-radius: 8px;
-  background: rgb(255, 255, 255);
-  box-shadow: 3px 3px 10px -1px var(--black-70);
 }
 
 .my-posts-container__post-image-container {
   position: relative;
+  border-radius: 10px;
 }
 
 .my-posts-container__post-image{
   width: 100%;
-  height: 100%;
-  aspect-ratio: 1/1;
-  object-fit: cover;
+  height: auto;
   display: block;
-}
-
-.my-posts-container__post-image-color-overlay {
-  position: absolute;
-  z-index: 2;
-  top: 0;
-  left: 0;;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.300);
+  border-radius: 10px;
 }
 
 .my-posts-container__post-text-content {
   display: grid;
-  align-items: start;
-  gap: 0.8rem;
-}
-
-.my-posts-container__author-and-date {
-  display: grid;
-}
-
-.my-posts-container__post-author {
-  font-weight: 500;
-  font-size: 1.05rem;
-  color: rgb(75, 75, 75);
-}
-
-.my-posts-container__date-and-like {
-  display: grid;
   align-content: start;
-  gap: 0.5rem;
+  gap: 0.3rem;
 }
 
 .my-posts-container__date-posted {
@@ -2752,93 +2780,78 @@ My Posts
 }
 
 .my-posts-container__post-title {
-  color: rgb(44, 44, 44);
-  line-height: 1.4;
-  letter-spacing: 0.04rem;
-  font-size: 1.25rem;
+  color: var(--purplish-brown-15);
+  line-height: 1.3;
+  font-size: clamp(1.1rem, 1vw + 1rem , 1.7rem);
   font-weight: 600;
-  text-wrap: balance;
+  text-wrap: pretty;
 }
 
 .my-posts-container__post-content {
   letter-spacing: 0.07rem;
-  color: rgb(59, 59, 59);
+  color: var(--purplish-brown-20);
+  line-height: 1.4;
   text-wrap: pretty;
 }
 
-.my-posts-container__post-topic {
-  position: absolute;
-  z-index: 2;
-  top: 16px;
-  right: 16px;
-  background: rgb(148, 0, 148);
-  padding: 0.3rem 0.5rem;
-  color: white;
-  border-radius: 5px;
-  font-size: 0.9rem;
-  font-weight: 500;
-
-  display: flex;
-  gap: 0.5rem;
-  align-items: center;
-  letter-spacing: 0.05rem;
-}
-
-.my-posts-container__post-topic > i {
-  font-size: 0.8rem;
-  margin-top: 0.1rem
-}
 .my-posts-container__btns {
-  align-self: end;
-  display: grid;
-  gap: 0.5rem;
-  margin-top: 0.7rem
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  margin-top: 0.5rem;
 }
+
 .my-posts-container__post-update {
-  padding: 0.8rem 1rem;
-  background: orangered;
-  color: white;
-  text-align: center;
-  border-radius: 5px;
-  font-size: 1rem;
-  font-weight: 500;
-  border: none;
-  cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: 0.3rem;
+  color: var(--black-70);
 }
 
 .my-posts-container__post-delete {
-  padding: 0.8rem 1rem;
-  background: rgb(78, 78, 78);
-  color: white;
-  text-align: center;
-  border-radius: 5px;
-  font-size: 1rem;
-  font-weight: 500;
+  background: none;
+  color: var(--black-70);
+  display: flex;
+  align-items: center;
+  gap: 0.3rem;
   border: none;
   cursor: pointer;
 }
 
-@media screen and (min-width: 700px) {
-  
-  .my-posts-container__post {
-    display: flex;
-    gap: 2rem;
+.my-posts-container__post-update > 
+.post-detail-edit-btn {
+  font-size: 1rem;
+}
+.my-posts-container__post-update > 
+.post-detail-edit-text {
+  font-size: 0.9rem;
+}
+
+.my-posts-container__post-delete > 
+.post-detail-remove-icon {
+  font-size: 0.9rem;
+}
+
+.my-posts-container__post-delete > 
+.post-detail-remove-text {
+  font-size: 0.9rem;
+}
+
+@media screen and (min-width: 600px) {
+  .my-posts-container__posts {
+    grid-template-columns: repeat(2, 1fr);
+    row-gap: 2.5rem;
   }
 
-  .my-posts-container__post-image{
-    width: 300px;
+  .my-posts-container__post-title {
+    font-size: clamp(1.1rem, 1vw + 1rem , 1.2rem);
   }
-  
-  .my-posts-container__btns {
-    display: flex;
-    align-items: center;
-    margin-top: 0.5rem;
-  }
+}
 
-  .my-posts-container__post-delete,
-  .my-posts-container__post-update {
-    padding: 0.6rem 1rem;
-    margin-top: 0rem;
+@media screen and (min-width: 1000px) {
+  .my-posts-main-container {
+    padding: 4rem 0;
+    padding-bottom: 5rem;
   }
 }
 
@@ -3138,7 +3151,7 @@ TOPIC POSTS
 
 .topic-posts-navbar__nav-bar-text {
   letter-spacing: 0.05rem;
-  color: var(--orange-20);
+  color: var(--purplish-brown-20);
   font-size: 1rem;
 }
 
@@ -3157,7 +3170,7 @@ TOPIC POSTS
 .topic-change-input {
   letter-spacing: 0.05rem;
   font-size: 0.95rem;
-  color: var(--orange-10);
+  color: var(--purplish-brown-20);
 }
 
 .topic-post-toggle-btn {
@@ -3165,7 +3178,7 @@ TOPIC POSTS
   border: none;
   font-size: 1rem;
   cursor: pointer;
-  color: var(--orange-20)
+  color: var(--purplish-brown-20)
 }
 
 .topic-posts-navbar__topics-btns {
@@ -3272,7 +3285,7 @@ TOPIC POSTS
 }
 
 .topic-posts-container__post-title {
-  color: var(--orange-10);
+  color: var(--purplish-brown-15);
   line-height: 1.3;
   font-size: clamp(1.1rem, 1vw + 1rem , 1.7rem);
   font-weight: 600;
@@ -3281,13 +3294,13 @@ TOPIC POSTS
 
 .topic-posts-container__post-content {
   letter-spacing: 0.07rem;
-  color: var(--orange-20);
+  color: var(--purplish-brown-20);
   text-wrap: pretty;
   line-height: 1.4;
 }
 
 .topic-post-container__post-read-more-btn {
-  color: var(--orange-57);
+  color: var(--orange-50);
   text-decoration: underline;
 }
 
@@ -3505,7 +3518,7 @@ USER LOGIN
 
 .user-login__btn {
   padding: 0.8rem 1rem;
-  background: var(--orange-57);
+  background: var(--orange-50);
   color: white;
   font-size: 1rem;
   border-radius: 5px;
@@ -3528,7 +3541,7 @@ USER LOGIN
 }
 
 .user-login__not-yet-registered > a {
-  color: var(--orange-57);
+  color: var(--orange-50);
   letter-spacing: 0.05rem;
   font-weight: 500;
   text-decoration: underline;
